--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -25,7 +25,7 @@
         <ion-icon size="large" slot="start" name="globe"></ion-icon> <ion-label>Languages</ion-label>
       </ion-button>
 
-      <ion-button slot="start" (click)="translate()">
+      <ion-button slot="start" (click)="presentTranslateModal()">
         <ion-icon size="large" slot="start" name="language"></ion-icon> <ion-label>Translate</ion-label>
       </ion-button>
     </ion-buttons>
