translator modal and service base

--- a/src/app/components/top-menu/translate-modal/translate-modal.component.html
+++ b/src/app/components/top-menu/translate-modal/translate-modal.component.html
@@ -11,16 +11,22 @@
 <ion-content fullscreen>
   <ion-card>
     <ion-card-header>
-      <ion-card-subtitle>Choose languages to translate</ion-card-subtitle>
+      <ion-card-subtitle>Choose languages</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
       <ion-button (click)="presentLanguagesModal()" expand="block" fill="clear" shape="round">
         <ion-icon name="globe"></ion-icon> Add languages
       </ion-button>
-      <ion-item>
-        <ion-label>Selected</ion-label>
-        <ion-select multiple="true" [value]="global.languages">
+      <ion-item *ngIf="global.languages.length>0">
+        <ion-label>From</ion-label>
+        <ion-select [value]="translator.mainLanguage" (ionChange)="mainLanguageSelectedChanged($event.detail.value)">
           <ion-select-option *ngFor="let language of global.languages" [value]="language">{{language}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item *ngIf="global.languages.length>0">
+        <ion-label>To</ion-label>
+        <ion-select multiple="true" [value]="translator.languages" (ionChange)="languagesSelectedChanged($event.detail.value)">
+          <ion-select-option *ngFor="let language of languagesAvailable()" [value]="language">{{language}}</ion-select-option>
         </ion-select>
       </ion-item>
       
@@ -33,18 +39,18 @@
     <ion-card-content>
       <ion-item>
         <ion-label>All unfilled</ion-label>
-        <ion-checkbox slot="end" [value]="unfilled" (ionChange)="unfilledChanged($event.detail.value)"></ion-checkbox>
+        <ion-checkbox slot="end" [value]="translator.unfilled" (ionChange)="unfilledChanged($event.detail.value)"></ion-checkbox>
       </ion-item>
 
       <ion-item>
         <ion-label>All unverified (Be careful, this can erase your translation)</ion-label>
-        <ion-checkbox slot="end" [value]="unverified" (ionChange)="unverifiedChanged($event.detail.value)"></ion-checkbox>
+        <ion-checkbox slot="end" [value]="translator.unverified" (ionChange)="unverifiedChanged($event.detail.value)"></ion-checkbox>
       </ion-item>
     </ion-card-content>
   </ion-card>
   <ion-card>
     <ion-card-header>
-      <ion-card-subtitle>You will translate {{words}} words, {{characters}} characters.</ion-card-subtitle>
+      <ion-card-subtitle>You will fill {{translator.getTrad()}} translations.</ion-card-subtitle>
     </ion-card-header>
     </ion-card>
   
@@ -59,7 +65,7 @@
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="primary">
-      <ion-button (click)="translate()" slot="primary" color="success">
+      <ion-button (click)="translate()" slot="primary" color="success" [disabled]="translator.getTrad() == 0">
         <ion-icon slot="start" name="checkmark"></ion-icon>
         Translate
       </ion-button>
