--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -47,3 +47,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
+
+<input type="file" (change)="onFileSelected($event)" #load accept=".in18" style="display: none;" />
+<input type="file" (change)="import(import.files)" accept=".json,.csv,.xml" #import style="display: none;" />
