--- a/src/app/components/top-menu/languages-modal/languages-modal.component.html
+++ b/src/app/components/top-menu/languages-modal/languages-modal.component.html
@@ -21,7 +21,7 @@
   <ion-footer class="ion-no-border">
     <ion-item>
       <ion-label position="floating">New Language</ion-label>
-      <ion-input [value]="newLanguage" (ionChange)="onNewLanguageChange($event.detail.value)"></ion-input>
+      <ion-input [value]="newLanguage" (keydown.enter)="add()" (ionChange)="onNewLanguageChange($event.detail.value)" autofocus="true"></ion-input>
       <ion-button slot="end" (click)="add()" shape="round" color="primary" [disabled]="newLanguage==''"><ion-icon name="add"></ion-icon></ion-button>
     </ion-item>
     <!--<ion-toolbar>
