--- a/src/app/components/top-menu/menu-popover/template-popover.component.html
+++ b/src/app/components/top-menu/menu-popover/template-popover.component.html
@@ -1,26 +1,28 @@
-
-
 <ion-list *ngIf="id==0">
 
-  <ion-item button  (click)="new()">
-            
-    New <ion-note slot="end">Ctrl+N</ion-note><ion-icon name="add-circle" slot="end"></ion-icon>
- </ion-item>
- <!--<ion-item button (click)="close()">
+  <ion-item button (click)="new()">
+
+    New <ion-note slot="end">Ctrl+N</ion-note>
+    <ion-icon name="add-circle" slot="end"></ion-icon>
+  </ion-item>
+  <!--<ion-item button (click)="close()">
    Close <ion-note slot="end">Ctrl+?</ion-note><ion-icon name="close-circle" slot="end"></ion-icon>
    </ion-item>-->
-        
-    <ion-item button lines="none"  (click)="load.click()">
-            
-       Load <ion-note slot="end">Ctrl+I</ion-note><ion-icon name="folder-open" slot="end"></ion-icon>
-    </ion-item>
-    <ion-item button lines="none" (click)="save()">
-      Save <ion-note slot="end">Ctrl+S</ion-note><ion-icon name="save" slot="end"></ion-icon>
-      </ion-item>
-      <ion-item button (click)="save()">
-        Save as <ion-note slot="end">Ctrl+shift+S</ion-note><ion-icon name="save" slot="end"></ion-icon>
-        </ion-item>
-    <!--
+
+  <ion-item button lines="none" (click)="load()">
+
+    Load <ion-note slot="end">Ctrl+O</ion-note>
+    <!--<ion-icon name="folder-open" slot="end"></ion-icon>-->
+  </ion-item>
+  <ion-item button lines="none" (click)="save()">
+    Save <ion-note slot="end">Ctrl+S</ion-note>
+    <!--<ion-icon name="save" slot="end"></ion-icon>-->
+  </ion-item>
+  <ion-item button (click)="save()">
+    Save as <ion-note slot="end">Ctrl+shift+S</ion-note>
+    <!--<ion-icon name="save" slot="end"></ion-icon>-->
+  </ion-item>
+  <!--
     <ion-item button lines="none" (click)="import.click()">
       Import <ion-note slot="end">Ctrl+Shift+I</ion-note><ion-icon name="share" slot="end"></ion-icon>
       </ion-item>
@@ -28,12 +30,8 @@
       Export <ion-note slot="end">Ctrl+Shift+S</ion-note><ion-icon name="download" slot="end"></ion-icon>
     </ion-item>-->
 
-    <ion-item button lines="none" (click)="quit()">
-      Exit
-    </ion-item>
-    
-  </ion-list>
+  <ion-item button lines="none" (click)="quit()">
+    Exit <ion-note slot="end">Ctrl+Q</ion-note>
+  </ion-item>
 
-  <input type="file" (change)="onFileSelected($event)" #load accept=".in18" style="display: none;"/>
-  <input type="file" (change)="import(import.files)" accept=".json,.csv,.xml" #import style="display: none;"/>
-
+</ion-list>
