need to fix save file

--- a/src/app/components/trad-folder/trad-folder.component.html
+++ b/src/app/components/trad-folder/trad-folder.component.html
@@ -21,7 +21,7 @@
         <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="selectParent()" *ngIf="!canExpand && !folder.isRoot()">
           <ion-icon name="chevron-up-outline"></ion-icon>
         </ion-button>
-        <ion-button slot="end" expand="block" shape="round" (click)="presentDeleteConfirm()"
+        <ion-button slot="end" expand="block" shape="round" (click)="presentDeleteConfirm()" *ngIf="!folder.isRoot()"
           color="danger">
           <ion-icon name="trash"></ion-icon>
         </ion-button>
