--- a/src/app/components/top-menu/menu-popover/template-popover.component.html
+++ b/src/app/components/top-menu/menu-popover/template-popover.component.html
@@ -18,7 +18,7 @@
     Save <ion-note slot="end">Ctrl+S</ion-note>
     <!--<ion-icon name="save" slot="end"></ion-icon>-->
   </ion-item>
-  <ion-item button (click)="save()">
+  <ion-item button (click)="saveAs()">
     Save as <ion-note slot="end">Ctrl+shift+S</ion-note>
     <!--<ion-icon name="save" slot="end"></ion-icon>-->
   </ion-item>
