--- a/src/app/components/trad-folder/trad-folder.component.html
+++ b/src/app/components/trad-folder/trad-folder.component.html
@@ -1,6 +1,8 @@
 <ion-card [class]="canExpand?'':'opened-folder'">
   <ion-card-header>
     <ion-card-subtitle>
+      <ion-row>
+        <ion-col>
       <ion-item [class]="canExpand?'':'opened-folder'">
 
         
@@ -9,6 +11,13 @@
         <ion-icon slot="start" name="checkmark-circle" color="success" *ngIf="folder.isValidated()"></ion-icon>
         <ion-textarea slot="start" [value]="folder.getName()" (ionChange)="onNameUpdate($event.target.value)"
           [color]="folder.isValidated()?'success':folder.isFilled()?'primary':''"></ion-textarea>
+        
+        
+      </ion-item>
+
+    </ion-col>
+    <ion-col *ngIf="!folder.isRoot()">
+      <ion-item [class]="canExpand?'':'opened-folder'">
         <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="addTraduction()" *ngIf="canExpand">
           <ion-icon name="add"></ion-icon><ion-icon name="document"></ion-icon>
         </ion-button>
@@ -25,8 +34,9 @@
           color="danger">
           <ion-icon name="trash"></ion-icon>
         </ion-button>
-        
       </ion-item>
+    </ion-col>
+    </ion-row>
     </ion-card-subtitle>
     <app-progress-bar [showText]="false" [percentValidation]="folder.percentValidation()" [percentFill]="folder.percentFill()"></app-progress-bar>
 
