remove icon new

--- a/src/app/components/top-menu/menu-popover/template-popover.component.html
+++ b/src/app/components/top-menu/menu-popover/template-popover.component.html
@@ -3,7 +3,7 @@
   <ion-item button (click)="new()">
 
     New <ion-note slot="end">Ctrl+N</ion-note>
-    <ion-icon name="add-circle" slot="end"></ion-icon>
+    <!--<ion-icon name="add-circle" slot="end"></ion-icon>-->
   </ion-item>
   <!--<ion-item button (click)="close()">
    Close <ion-note slot="end">Ctrl+?</ion-note><ion-icon name="close-circle" slot="end"></ion-icon>
