--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,28 +10,33 @@
     <div class="ion-page" id="main-content">
       <ion-content class="ion-padding">
         <ion-item class="no-background">
-          
-          
+
+
           <ion-buttons slot="end">
             <ion-button fill="clear" shape="round" (click)="presentLanguagesModal()">
-              <ion-label slot="start">+</ion-label><ion-icon slot="start" name="globe-outline"></ion-icon>
+              <ion-label slot="start">+</ion-label>
+              <ion-icon slot="start" name="globe-outline"></ion-icon>
             </ion-button>
-            <div *ngFor = "let language of global.languages; let index=index">
+            <div *ngFor="let language of global.languages; let index=index">
               <ion-chip (click)="presentLanguagesModal()" *ngIf="index<3">{{language}}</ion-chip>
               <ion-chip (click)="presentLanguagesModal()" *ngIf="index==3">...</ion-chip>
             </div>
           </ion-buttons>
-          <div class="breadcrumb" size="small"><app-breadcrumb [structure]="global.selectedStructure"></app-breadcrumb></div>
+          <div class="breadcrumb" size="small">
+            <app-breadcrumb [structure]="global.selectedStructure"></app-breadcrumb>
+          </div>
         </ion-item>
         <ion-list class="special">
-          
+
           <div *ngIf="!global.isSelectedStructureFolder()">
             <app-trads-group [tradGroup]="global.getSelectedStructureAsTradGroup()"></app-trads-group>
           </div>
           <div *ngIf="global.isSelectedStructureFolder()">
             <app-trad-folder [folder]="global.getSelectedFolder()"></app-trad-folder>
-            <app-trads-group *ngFor="let t of global.selectedTradGroups$ | async" [tradGroup]="t" [canExpand]="true"></app-trads-group>
-            <app-trad-folder *ngFor="let f of global.selectedFolders$ | async" [folder]="f" [canExpand]="true"></app-trad-folder>
+            <app-trads-group *ngFor="let t of global.selectedTradGroups$ | async" [tradGroup]="t" [canExpand]="true">
+            </app-trads-group>
+            <app-trad-folder *ngFor="let f of global.selectedFolders$ | async" [folder]="f" [canExpand]="true">
+            </app-trad-folder>
 
             <!--<ion-virtual-scroll [items]="selectedStructure">
               <div *virtualItem="let struct">
@@ -48,8 +53,8 @@
             </ion-virtual-scroll>-->
           </div>
           <ion-card>
-            
-            
+
+
             <ion-row>
               <ion-col>
                 <ion-button (click)="addTraduction()" expand="block" fill="clear" shape="round">
@@ -65,7 +70,7 @@
               </ion-col>
             </ion-row>
           </ion-card>
-          
+
         </ion-list>
       </ion-content>
     </div>
