--- a/src/app/components/top-menu/about-modal/about-modal.component.html
+++ b/src/app/components/top-menu/about-modal/about-modal.component.html
@@ -34,8 +34,8 @@
           </ion-item>
         </ion-col>
       </ion-row>
-      
-      
+
+
     </ion-card-content>
   </ion-card>
   <ion-card>
@@ -45,16 +45,20 @@
     <ion-card-content>
       <ion-item>
         <ion-label>Do you like our work?</ion-label>
-        <ion-button (click)="donation()"><ion-icon name="heart" slot="start"></ion-icon> Donation</ion-button>
+        <ion-button (click)="donation()">
+          <ion-icon name="heart" slot="start"></ion-icon> Donation
+        </ion-button>
       </ion-item>
     </ion-card-content>
   </ion-card>
-  
+
 </ion-content>
 
 <ion-footer>
   <ion-toolbar>
-    <ion-item slot='start' button (click)="copyright()"><ion-label>Copyright (C) 2020-2020</ion-label></ion-item>
+    <ion-item slot='start' button (click)="copyright()">
+      <ion-label>Copyright (C) 2020-2020</ion-label>
+    </ion-item>
     <ion-buttons slot="secondary">
       <ion-button (click)="dismissModal()" color="medium">
         <ion-icon slot="start" name="close"></ion-icon>
