--- a/src/app/components/trads-group/trads-group.component.scss
+++ b/src/app/components/trads-group/trads-group.component.scss
@@ -1,5 +1,5 @@
-.opened-file{
-    --background: rgba(0,0,0,0);
+.opened-file {
+    --background: rgba(0, 0, 0, 0);
     box-shadow: none;
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
 }
