--- a/src/app/components/tree-view/folder-tree/folder-tree.component.scss
+++ b/src/app/components/tree-view/folder-tree/folder-tree.component.scss
@@ -1,7 +1,7 @@
-ion-row{
+ion-row {
     flex-wrap: nowrap;
 }
 
-.selected{
-    --background: var(--ion-color-step-150)
+.selected {
+    --background: var(--ion-color-step-150);
 }
