--- a/src/app/components/trad-field/trad-field.component.scss
+++ b/src/app/components/trad-field/trad-field.component.scss
@@ -3,6 +3,6 @@ ion-button {
 }
 
 .no-background {
-  background-color: rgba(0,0,0,0);
-  --background: rgba(0,0,0,0);
+  background-color: rgba(0, 0, 0, 0);
+  --background: rgba(0, 0, 0, 0);
 }
