--- a/src/app/components/trad-folder/trad-folder.component.html
+++ b/src/app/components/trad-folder/trad-folder.component.html
@@ -3,49 +3,58 @@
     <ion-card-subtitle>
       <ion-row>
         <ion-col>
-      <ion-item [class]="canExpand?'':'opened-folder'">
+          <ion-item [class]="canExpand?'':'opened-folder'">
 
-        
-        <ion-icon slot="start" [name]="canExpand?'folder':'folder-open'" [color]="folder.isValidated()?'success':folder.isFilled()?'primary':''"></ion-icon>
-        <ion-icon slot="start" name="checkmark-circle-outline" color="primary" *ngIf="folder.isFilled() && !folder.isValidated()"></ion-icon>
-        <ion-icon slot="start" name="checkmark-circle" color="success" *ngIf="folder.isValidated()"></ion-icon>
-        <ion-textarea slot="start" [value]="folder.getName()" (ionChange)="onNameUpdate($event.target.value)"
-          [color]="folder.isValidated()?'success':folder.isFilled()?'primary':''"></ion-textarea>
-        
-        
-      </ion-item>
 
-    </ion-col>
-    <ion-col *ngIf="!folder.isRoot()">
-      <ion-item [class]="canExpand?'':'opened-folder'">
-        <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="addTraduction()" *ngIf="canExpand">
-          <ion-icon name="add"></ion-icon><ion-icon name="document"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="addTraduction(true)" *ngIf="canExpand">
-          <ion-icon name="add"></ion-icon><ion-icon name="folder"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="select()" *ngIf="canExpand">
-          <ion-icon name="chevron-down-outline"></ion-icon> Expand
-        </ion-button>
-        <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="selectParent()" *ngIf="!canExpand && !folder.isRoot()">
-          <ion-icon name="chevron-up-outline"></ion-icon>
-        </ion-button>
-        <ion-button slot="end" expand="block" shape="round" (click)="presentDeleteConfirm()" *ngIf="!folder.isRoot()"
-          color="danger">
-          <ion-icon name="trash"></ion-icon>
-        </ion-button>
-      </ion-item>
-    </ion-col>
-    </ion-row>
+            <ion-icon slot="start" [name]="canExpand?'folder':'folder-open'"
+              [color]="folder.isValidated()?'success':folder.isFilled()?'primary':''"></ion-icon>
+            <ion-icon slot="start" name="checkmark-circle-outline" color="primary"
+              *ngIf="folder.isFilled() && !folder.isValidated()"></ion-icon>
+            <ion-icon slot="start" name="checkmark-circle" color="success" *ngIf="folder.isValidated()"></ion-icon>
+            <ion-textarea slot="start" [value]="folder.getName()" (ionChange)="onNameUpdate($event.target.value)"
+              [color]="folder.isValidated()?'success':folder.isFilled()?'primary':''"></ion-textarea>
+
+
+          </ion-item>
+
+        </ion-col>
+        <ion-col *ngIf="!folder.isRoot()">
+          <ion-item [class]="canExpand?'':'opened-folder'">
+            <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="addTraduction()"
+              *ngIf="canExpand">
+              <ion-icon name="add"></ion-icon>
+              <ion-icon name="document"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="addTraduction(true)"
+              *ngIf="canExpand">
+              <ion-icon name="add"></ion-icon>
+              <ion-icon name="folder"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="select()" *ngIf="canExpand">
+              <ion-icon name="chevron-down-outline"></ion-icon> Expand
+            </ion-button>
+            <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="selectParent()"
+              *ngIf="!canExpand && !folder.isRoot()">
+              <ion-icon name="chevron-up-outline"></ion-icon>
+            </ion-button>
+            <ion-button slot="end" expand="block" shape="round" (click)="presentDeleteConfirm()"
+              *ngIf="!folder.isRoot()" color="danger">
+              <ion-icon name="trash"></ion-icon>
+            </ion-button>
+          </ion-item>
+        </ion-col>
+      </ion-row>
     </ion-card-subtitle>
-    <app-progress-bar [showText]="false" [percentValidation]="folder.percentValidation()" [percentFill]="folder.percentFill()"></app-progress-bar>
+    <app-progress-bar [showText]="false" [percentValidation]="folder.percentValidation()"
+      [percentFill]="folder.percentFill()"></app-progress-bar>
 
   </ion-card-header>
 
   <ion-card-content *ngIf="!canExpand">
-    
-    <app-progress-bar [showBar]="false" [percentValidation]="folder.percentValidation()" [percentFill]="folder.percentFill()"></app-progress-bar>
-    
+
+    <app-progress-bar [showBar]="false" [percentValidation]="folder.percentValidation()"
+      [percentFill]="folder.percentFill()"></app-progress-bar>
+
   </ion-card-content>
 
 </ion-card>
