--- a/src/app/components/trad-folder/trad-folder.component.scss
+++ b/src/app/components/trad-folder/trad-folder.component.scss
@@ -1,7 +1,5 @@
-.opened-folder{
-    --background: rgba(0,0,0,0);
+.opened-folder {
+    --background: rgba(0, 0, 0, 0);
     box-shadow: none;
-    background-color: rgba(0,0,0,0);
-    
-
+    background-color: rgba(0, 0, 0, 0);
 }
