--- a/src/app/components/tree-view/folder-tree/folder-tree.component.html
+++ b/src/app/components/tree-view/folder-tree/folder-tree.component.html
@@ -1,18 +1,19 @@
 <ion-row *ngIf="level>=0">
   <ion-col [size]="level*2"></ion-col>
-  <ion-col size="sizeXs"> 
+  <ion-col size="sizeXs">
     <ion-item button (click)="toggleCollapse()">
       <ion-icon [name]="chevronIcon()" [color]="getColor(true)"></ion-icon>
-      
+
     </ion-item>
   </ion-col>
   <ion-col style="min-width: 0px;">
-    <ion-item button  (click)="toggleCollapse(true)" [class]="getBgColor(true)?'selected':''">
+    <ion-item button (click)="toggleCollapse(true)" [class]="getBgColor(true)?'selected':''">
       <ion-icon slot="start" [name]="folderIcon()" [color]="getColor(true)"></ion-icon>
       <ion-label [color]="getColor(true)">
-          {{folder.getName()}}
+        {{folder.getName()}}
       </ion-label>
-      <ion-icon slot="end" name="checkmark-circle-outline" color="primary" *ngIf="folder.isFilled() && !folder.isValidated()"></ion-icon>
+      <ion-icon slot="end" name="checkmark-circle-outline" color="primary"
+        *ngIf="folder.isFilled() && !folder.isValidated()"></ion-icon>
       <ion-icon slot="end" name="checkmark-circle" color="success" *ngIf="folder.isValidated()"></ion-icon>
     </ion-item>
   </ion-col>
@@ -39,9 +40,10 @@
       <ion-item button (click)="select(file)" [class]="getBgColor(false,file)?'selected':''">
         <ion-icon slot="start" name="document" [color]="getColor(false,file)"></ion-icon>
         <ion-label [color]="getColor(false,file)">
-            {{file.getName()}}
+          {{file.getName()}}
         </ion-label>
-        <ion-icon slot="end" name="checkmark-circle-outline" color="primary" *ngIf="file.isFilled() && !file.isValidated()"></ion-icon>
+        <ion-icon slot="end" name="checkmark-circle-outline" color="primary"
+          *ngIf="file.isFilled() && !file.isValidated()"></ion-icon>
         <ion-icon slot="end" name="checkmark-circle" color="success" *ngIf="file.isValidated()"></ion-icon>
       </ion-item>
     </ion-col>
