--- a/src/app/components/tree-view/new-trad-modal/new-trad-modal.component.html
+++ b/src/app/components/tree-view/new-trad-modal/new-trad-modal.component.html
@@ -2,11 +2,13 @@
   <ion-toolbar>
     <ion-title>New {{isFolder?'Folder':'Item'}}</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="cancel()"><ion-icon name="close"></ion-icon></ion-button>
+      <ion-button (click)="cancel()">
+        <ion-icon name="close"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
-  
-  
+
+
 </ion-header>
 
 <ion-content>
@@ -20,11 +22,11 @@
   </ion-item>
 
   <ion-title *ngIf="!isFolder" style="margin: 10px auto;">Fill traductions</ion-title>
-  <div *ngIf="!isFolder" >
+  <div *ngIf="!isFolder">
 
     <app-trad-field *ngFor="let trad of tradGroup.tradList" [trad]="trad"></app-trad-field>
   </div>
-  
+
   <ion-button (click)="presentLanguagesModal()" expand="block" fill="clear" shape="round" *ngIf="!isFolder">
     <ion-icon name="globe"></ion-icon> Add languages
   </ion-button>
