--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,8 +8,7 @@
 }
 
 .special {
-  --background: #121212;
-  background-color: #181818;
+  background-color: var(--ion-color-step-0);
   border-radius: 4px;
 }
 
