--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <ion-app>
+  
   <app-top-menu></app-top-menu>
+  
   <ion-split-pane when="sm" content-id="main-content" class="main-content">
     <ion-menu content-id="main-content">
       <ion-content>
@@ -8,7 +10,9 @@
     </ion-menu>
 
     <div class="ion-page" id="main-content">
+      <ion-progress-bar type="indeterminate" color="primary" class="loading_bar" *ngIf="global.loading"></ion-progress-bar>
       <ion-content class="ion-padding">
+        
         <ion-item class="no-background">
 
 
