fix load/save project and add option to not include folder name in export

--- a/src/app/components/top-menu/menu-popover/template-popover.component.html
+++ b/src/app/components/top-menu/menu-popover/template-popover.component.html
@@ -11,7 +11,7 @@
 
   <ion-item button lines="none" (click)="load()">
 
-    Load <ion-note slot="end">Ctrl+O</ion-note>
+    Open <ion-note slot="end">Ctrl+O</ion-note>
     <!--<ion-icon name="folder-open" slot="end"></ion-icon>-->
   </ion-item>
   <ion-item button lines="none" (click)="save()">
