--- a/src/app/components/top-menu/export-modal/export-modal.component.scss
+++ b/src/app/components/top-menu/export-modal/export-modal.component.scss
@@ -2,9 +2,21 @@ ion-col {
     border: 1px solid var(--ion-background-color);
   }
 
+  td{
+    border: 1px solid var(--ion-background-color);
+    white-space: nowrap;
+    padding: 5px;
+    width: 100%;
+  }
 
-//   ion-row{
-//     flex-wrap: nowrap;
-//     overflow-x: scroll!important;
-//     overflow-y: hidden;
-//   }
+  // ion-grid{
+  //   flex-wrap: nowrap;
+  //   overflow-x: scroll!important;
+  //   overflow-y: hidden;
+  // }
+
+  // ion-col {
+  //   flex: 0 0 4px;
+  //   padding:0;
+  //   margin-right:10px;
+  // }
