--- a/src/app/components/top-menu/settings-modal/settings-modal.component.html
+++ b/src/app/components/top-menu/settings-modal/settings-modal.component.html
@@ -101,9 +101,9 @@
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="primary">
-      <ion-button (click)="save()" slot="primary" color="success">
+      <ion-button (click)="save();close();" slot="primary" color="success">
         <ion-icon slot="start" name="checkmark"></ion-icon>
-        Save
+        Save and close
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
