--- a/src/app/components/top-menu/menu-popover/template-popover.component.html
+++ b/src/app/components/top-menu/menu-popover/template-popover.component.html
@@ -29,7 +29,9 @@
     <ion-item button (click)="testClick()">
       Export <ion-note slot="end">Ctrl+Shift+S</ion-note><ion-icon name="download" slot="end"></ion-icon>
     </ion-item>-->
-
+    <ion-item button (click)="close()">
+      Close <ion-note slot="end">Ctrl+W</ion-note>
+    </ion-item>
   <ion-item button lines="none" (click)="quit()">
     Exit <ion-note slot="end">Ctrl+Q</ion-note>
   </ion-item>
