--- a/src/app/components/top-menu/new-project-modal/new-project-modal.component.html
+++ b/src/app/components/top-menu/new-project-modal/new-project-modal.component.html
@@ -49,8 +49,14 @@
   <ion-toolbar>
     <ion-buttons slot="secondary">
       <ion-button (click)="dismissModal()" color="medium">
-        Ok
+        <ion-icon slot="start" name="close"></ion-icon>
+        Close
       </ion-button>
     </ion-buttons>
+    <!-- <ion-buttons slot="primary">
+      <ion-button (click)="dismissModal()" color="success">
+        Create
+      </ion-button>
+    </ion-buttons> -->
   </ion-toolbar>
 </ion-footer>
